--- a/ALL2_sample_templates/Manager/navigation.html
+++ b/ALL2_sample_templates/Manager/navigation.html
@@ -3,12 +3,11 @@
     
     <body>
         <div id="navcolumn">
-            <ul style = "list-style-type:none;">
-                <li>Home</li>
-                <li>Inventory</li>
-                <li>Sales</li>
-                <li>Users</li>
-            </ul>
+            <a class="nav" id="home"><img src="assets/home.png"> Home</a>
+            <a class="nav" id="inventory"><img src="assets/shipping.png"> Inventory</a>
+            <a class="nav" id="sales"><img src="assets/report.png"> Sales</a>
+            <a class="nav" id="users"><img src="assets/users.png"> Users</a>
+            <a id="logout"><img src="assets/logout.png"> Logout</a>
         </div>
     </body>
 </html>
