--- a/ALL2_sample_templates/Manager/navigation.html
+++ b/ALL2_sample_templates/Manager/navigation.html
@@ -2,12 +2,12 @@
     <link rel="stylesheet" href="navigation.css">
     
     <body>
-        <div id="navcolumn">
-            <a class="nav" id="home"><img src="assets/home.png"> Home</a>
-            <a class="nav" id="inventory"><img src="assets/shipping.png"> Inventory</a>
-            <a class="nav" id="sales"><img src="assets/report.png"> Sales</a>
-            <a class="nav" id="users"><img src="assets/users.png"> Users</a>
-            <a id="logout"><img src="assets/logout.png"> Logout</a>
+        <div class="navigation-column" id="navcolumn">
+            <a class="nav"><img src="assets/home.png" class="logo" id="home"><p class="navfull"> Home</p></a>
+            <a class="nav"><img src="assets/shipping.png" class="logo" id="inventory"><p class="navfull"> Inventory</p></a>
+            <a class="nav"><img src="assets/report.png" class="logo" id="sales"><p class="navfull"> Sales</p></a>
+            <a class="nav"><img src="assets/users.png" class="logo" id="users"><p class="navfull"> Users</p></a>
+            <a class="nav"><img src="assets/logout.png" class="logo" id="logout"><p class="navfull"> Logout</p></a>
         </div>
     </body>
 </html>
