sales page progress

--- a/ALL2_sample_templates/Manager/inventory_page.html
+++ b/ALL2_sample_templates/Manager/inventory_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- {% load static %} -->
 <html>
-    <!-- <link rel = "stylesheet" href="{% static 'manager/dashboard.css' %}"> -->
+    <!-- <link rel = "stylesheet" href="{% static 'manager/inventory.css' %}"> -->
     <link rel="stylesheet" href="inventory_page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
