sales page html css

--- a/ALL2_sample_templates/Manager/inventory_page.html
+++ b/ALL2_sample_templates/Manager/inventory_page.html
@@ -17,38 +17,42 @@
         <div id="main-content">
             <table>
                 <!-- Table Header-->
-                <tr>
-                    <th><img src="assets/up-and-down-arrow.png" class="header"><p> Product Name</p></th>
-                    <th><img src="assets/up-and-down-arrow.png" class="header"><p> Stock</p></th>
-                    <th><img src="assets/up-and-down-arrow.png" class="header"><p> Last Stocked</p></th>
-                    <th><img src="assets/up-and-down-arrow.png" class="header"><p> Supplier</p></th>
-                    <th><img src="assets/up-and-down-arrow.png" class="header"><p> Supplier Contact</p></th>
-                </tr>
+                 <thead>
+                    <tr>
+                        <th><img src="assets/up-and-down-arrow.png" class="header"><p> Product Name</p></th>
+                        <th><img src="assets/up-and-down-arrow.png" class="header"><p> Stock</p></th>
+                        <th><img src="assets/up-and-down-arrow.png" class="header"><p> Last Stocked</p></th>
+                        <th><img src="assets/up-and-down-arrow.png" class="header"><p> Supplier</p></th>
+                        <th><img src="assets/up-and-down-arrow.png" class="header"><p> Supplier Contact</p></th>
+                    </tr>
+                 </thead>
                 
                 <!-- Sample Data -->
-                <tr id="product1">
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                </tr>
+                 <tbody>
+                    <tr id="product1">
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                    </tr>
 
-                <tr id="product2">
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                </tr>
+                    <tr id="product2">
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                    </tr>
 
-                <tr id="product3">
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                    <td><p>Toothpaste</p></td>
-                </tr>
+                    <tr id="product3">
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                        <td><p>Toothpaste</p></td>
+                    </tr>
+                 </tbody>
             </table>
         </div>
         <div id="filter-column">
