--- a/ALL2_sample_templates/Manager/sales.html
+++ b/ALL2_sample_templates/Manager/sales.html
@@ -89,8 +89,37 @@
 
             <div id="transaction-box">
                 <h2 class="boxTitle">Transactions</h2>
+                <button class="transac-switch">
+                    <p class="periods monthly">Monthly</p>
+                    <p class="periods daily">Daily</p>
+                </button>
 
-                <div id="transac-details"></div>
+                <div id="transac-details">
+                    <table class="transac-table">
+                        <thead class="transac-table">
+                            <tr>
+                                <th> Transaction ID </th>
+                                <th> Payment Method </th>
+                                <th> Timestamp </th>
+                                <th> Amount </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>101111</td>
+                                <td>Credit Card</td>
+                                <td>13-12-2025 20:13:04</td>
+                                <td>RM 200.00</td>
+                            </tr>
+                            <tr>
+                                <td>101111</td>
+                                <td>Credit Card</td>
+                                <td>13-12-2025 20:13:04</td>
+                                <td>RM 200.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 
                 <h3 id="transac-total"> Total: </h3>
                 <button class="prints"> Print </button>
@@ -131,16 +160,44 @@
                     <button class="prints stocks"> Print </button>
 
                     <table id="stocks-table">
-                        <tr id="header">
-                            <th> Supplier </th>
-                            <th> Product Name </th>
-                            <th> Ordered On </th>
-                            <th> ETA </th>
-                            <th> Batch ID </th>
-                            <th> Unit Cost </th>
-                            <th> Total Cost </th>
-                            <th> Approval </th>
-                        </tr>
+                        <thead class="stocks-table">
+                            <tr id="header">
+                                <th> Supplier </th>
+                                <th> Product Name </th>
+                                <th> Ordered On </th>
+                                <th> ETA </th>
+                                <th> Batch ID </th>
+                                <th> Unit Cost </th>
+                                <th> Units Ordered </th>
+                                <th> Total Cost </th>
+                                <th> Approval </th>
+                            </tr>
+                        </thead>
+                        <tbody class="stocks-table">
+                            <tr class="stocks-table">
+                                <td>Sample Supplier</td>
+                                <td>Product with a long long name</td>
+                                <td>02/05/2025</td>
+                                <td>12/05/2024</td>
+                                <td>10111221</td>
+                                <td>3.00</td>
+                                <td>100</td>
+                                <td>300.00</td>
+                                <td><button type="button" class="stocks-approval"> On Hold </button></td>
+                            </tr>
+                            <tr class="stocks-table">
+                                <td>Sample Supplier</td>
+                                <td>Product with a long long name</td>
+                                <td>02/05/2025</td>
+                                <td>12/05/2024</td>
+                                <td>10111221</td>
+                                <td>3.00</td>
+                                <td>100</td>
+                                <td>300.00</td>
+                                <td><button type="button" class="stocks-approval"> On Hold </button></td>
+                            </tr>
+                            <tr></tr>
+                        </tbody>
                     </table>
                 </div>
 
