cashier view_history html css done

--- a/ALL2_sample_templates/Cashier/sales_page.html
+++ b/ALL2_sample_templates/Cashier/sales_page.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="input-box">
-            <button type="button" class="input-bttn">Scan Item</button>
+            <button type="button" class="input-bttn scan">Scan Item</button>
             <div class="product-detail">
                 <h3 class="boxTitle">Product Name</h3>
                 <div class="details">
@@ -29,8 +29,8 @@
                     <input type="text" name="quantity" id="quantity">
                 </div>
             </div>
-            <button type="button" class="input-bttn">Enter Code</button>
-            <button type="button" class="input-bttn">Call Manager</button>
+            <button type="button" class="input-bttn code">Enter Code</button>
+            <button type="button" class="input-bttn manager">Call Manager</button>
         </div>
         <div class="cartbox">
             <h3 class="boxTitle">Cart</h3>
