--- a/ALL2_sample_templates/Cashier/view_history.html
+++ b/ALL2_sample_templates/Cashier/view_history.html
@@ -1,10 +1,128 @@
 <!DOCTYPE html>
 <!-- {% load static %} -->
 <html>
-    <!-- <link rel = "stylesheet" href="{% static 'manager/inventory.css' %}"> -->
-    <link rel="stylesheet" href="sales_page.css">
+    <!-- <link rel = "stylesheet" href="{% static 'cashier/view_history.css' %}"> -->
+    <link rel="stylesheet" href="view_history.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    
+
+    <body>
+        <div id="main-content">
+            <div id="dashboard">
+                <h1>Sales</h1>
+                <div class="filter">
+                    <div class="filter date">
+                        <h3 id="filter-title">20 APRIL 2025 - 20 MAY 2025</h3>
+                        <img src="assets/arrow-down.png" class="logo dropdown">
+                    </div>
+                    <div class="filter-date box">
+                        <div class="filter-date fixed">
+                            <button type="button" class="filter-date today"> Today </button>
+                            <button type="button" class="filter-date last7days"> Last 7 days </button>
+                            <button type="button" class="filter-date thisMth"> This Month </button>
+                        </div>
+                        <div class="filter-date custom">
+                            <h4>Custom Date Range</h4>
+                            <div style="display: flex;justify-content: space-evenly;align-items: center; width: 100%; height: 70%;">
+                                <button type="button" class="filter-date choice"> Start Date </button>
+                                <span class="filter-date middle"> - </span>
+                                <button type="button" class="filter-date choice"> End Date </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filter payment-type">
+                        <h3 id="filter-title"> Filter </h3>
+                        <img src="assets/adjust.png" class="logo filter">
+                    </div>
+                    <div class="filter-payment box">
+                        <ul>
+                            <button type="button" class="filter-payment">Credit Card</button>
+                            <button type="button" class="filter-payment">Debit Card</button>
+                            <button type="button" class="filter-payment">DuitNow</button>
+                            <button type="button" class="filter-payment">Cash</button>
+                            <button type="button" class="filter-payment">Others</button>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="history">
+                <div class="day">
+                    <h4 class="day title">20 APRIL 2025</h4>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                </div>
+                <div class="day">
+                    <h4 class="day title">19 APRIL 2025</h4>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                </div>
+                <div class="day">
+                    <h4 class="day title">19 APRIL 2025</h4>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                </div>
+                <div class="day">
+                    <h4 class="day title">19 APRIL 2025</h4>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                    <div class="day transactions">
+                        <h3>20 APRIL 2025, 14:00:52</h3>
+                        <h3>100023456</h3>
+                        <h3>Purchased 20 Items</h3>
+                        <h3>Credit Card</h3>
+                        <h3>RM 102.20</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
