added transaction history full detail html css

--- a/ALL2_sample_templates/Cashier/view_history.html
+++ b/ALL2_sample_templates/Cashier/view_history.html
@@ -16,7 +16,7 @@
                         <h3 id="filter-title">20 APRIL 2025 - 20 MAY 2025</h3>
                         <img src="assets/arrow-down.png" class="logo dropdown">
                     </div>
-                    <div class="filter-date box">
+                    <div class="filter-date-box">
                         <div class="filter-date fixed">
                             <button type="button" class="filter-date today"> Today </button>
                             <button type="button" class="filter-date last7days"> Last 7 days </button>
@@ -35,7 +35,7 @@
                         <h3 id="filter-title"> Filter </h3>
                         <img src="assets/adjust.png" class="logo filter">
                     </div>
-                    <div class="filter-payment box">
+                    <div class="filter-payment-box">
                         <ul>
                             <button type="button" class="filter-payment">Credit Card</button>
                             <button type="button" class="filter-payment">Debit Card</button>
@@ -120,6 +120,108 @@
                         <h3>Purchased 20 Items</h3>
                         <h3>Credit Card</h3>
                         <h3>RM 102.20</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="transact-detail">
+                <img src="assets/back-arrow.png" alt="back-arrow.png" id="close">
+                <div class="container">
+                    <h3>Created on 21 April 2025</h3>
+                    <h3>Receipt Number: 100024000</h3>
+                    <button type="button" id="print">Print</button>
+                    <div class="content-detail">
+                        <div class="box header">
+                            <h3 class="header">Item Code</h3>
+                            <h3 class="header">Product Name</h3>
+                            <h3 class="header2">Unit Price</h3>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                        <div class="box item">
+                            <h4 class="item">Code</h4>
+                            <h4 class="item">Product Name</h4>
+                            <h4 class="item2">Price</h4>
+                        </div>
+                    </div>
+                    <div class="included-box">
+                        <div class="included box subtotal">
+                            <h3 class="included title">SUB-TOTAL</h3>
+                            <h3 class="included value">105.32</h3>
+                        </div>
+                        <div class="included box discount">
+                            <h3 class="included title">Discount</h3>
+                            <h3 class="included value">-5.66</h3>
+                        </div>
+                        <div class="included box tax">
+                            <h3 class="included title">Tax</h3>
+                            <h3 class="included value">2.56</h3>
+                        </div>
+                    </div>
+                    <div class="final-box">
+                        <div class="final box totalpay">
+                            <h3 class="final title">TOTAL TO PAY</h3>
+                            <h3 class="final value">105.32</h3>
+                        </div>
+                        <div class="final box payment-type">
+                            <h3 class="final title">CASH</h3>
+                            <h3 class="final value">108.00</h3>
+                        </div>
+                        <!-- <div class="final box accNo">
+                            <h5 class="final title">5112111314</h5>
+                        </div> -->
+                        <div class="final box change">
+                            <h3 class="final title">CHANGE DUE</h3>
+                            <h3 class="final value">2.68</h3>
+                        </div>
                     </div>
                 </div>
             </div>
