tweaked manager sales page stocks table

--- a/ALL2_sample_templates/Manager/sales.html
+++ b/ALL2_sample_templates/Manager/sales.html
@@ -159,46 +159,105 @@
                     <h2 class="boxTitle"> Stocks </h2>
                     <button class="prints stocks"> Print </button>
 
-                    <table id="stocks-table">
-                        <thead class="stocks-table">
-                            <tr id="header">
-                                <th> Supplier </th>
-                                <th> Product Name </th>
-                                <th> Ordered On </th>
-                                <th> ETA </th>
-                                <th> Batch ID </th>
-                                <th> Unit Cost </th>
-                                <th> Units Ordered </th>
-                                <th> Total Cost </th>
-                                <th> Approval </th>
-                            </tr>
-                        </thead>
-                        <tbody class="stocks-table">
-                            <tr class="stocks-table">
-                                <td>Sample Supplier</td>
-                                <td>Product with a long long name</td>
-                                <td>02/05/2025</td>
-                                <td>12/05/2024</td>
-                                <td>10111221</td>
-                                <td>3.00</td>
-                                <td>100</td>
-                                <td>300.00</td>
-                                <td><button type="button" class="stocks-approval"> On Hold </button></td>
-                            </tr>
-                            <tr class="stocks-table">
-                                <td>Sample Supplier</td>
-                                <td>Product with a long long name</td>
-                                <td>02/05/2025</td>
-                                <td>12/05/2024</td>
-                                <td>10111221</td>
-                                <td>3.00</td>
-                                <td>100</td>
-                                <td>300.00</td>
-                                <td><button type="button" class="stocks-approval"> On Hold </button></td>
-                            </tr>
-                            <tr></tr>
-                        </tbody>
-                    </table>
+                    <div id="stocks-table-box">
+                        <table id="stocks-table">
+                            <thead class="stocks-table">
+                                <tr id="header">
+                                    <th> Supplier </th>
+                                    <th> Product Name </th>
+                                    <th> Ordered On </th>
+                                    <th> ETA </th>
+                                    <th> Batch ID </th>
+                                    <th> Unit Cost </th>
+                                    <th> Units Ordered </th>
+                                    <th> Total Cost </th>
+                                </tr>
+                            </thead>
+                            <tbody class="stocks-table">
+                                <tr class="stocks-table">
+                                    <td>Sample Supplier</td>
+                                    <td>Product with a long long name</td>
+                                    <td>02/05/2025</td>
+                                    <td>12/05/2024</td>
+                                    <td>10111221</td>
+                                    <td>3.00</td>
+                                    <td>100</td>
+                                    <td>300.00</td>
+                                </tr>
+                                <tr class="stocks-table">
+                                    <td>Sample Supplier</td>
+                                    <td>Product with a long long name</td>
+                                    <td>02/05/2025</td>
+                                    <td>12/05/2024</td>
+                                    <td>10111221</td>
+                                    <td>3.00</td>
+                                    <td>100</td>
+                                    <td>300.00</td>
+                                </tr>
+                                <tr class="stocks-table">
+                                    <td>Sample Supplier</td>
+                                    <td>Product with a long long name</td>
+                                    <td>02/05/2025</td>
+                                    <td>12/05/2024</td>
+                                    <td>10111221</td>
+                                    <td>3.00</td>
+                                    <td>100</td>
+                                    <td>300.00</td>
+                                </tr>
+                                <tr class="stocks-table">
+                                    <td>Sample Supplier</td>
+                                    <td>Product with a long long name</td>
+                                    <td>02/05/2025</td>
+                                    <td>12/05/2024</td>
+                                    <td>10111221</td>
+                                    <td>3.00</td>
+                                    <td>100</td>
+                                    <td>300.00</td>
+                                </tr>
+                                <tr class="stocks-table">
+                                    <td>Sample Supplier</td>
+                                    <td>Product with a long long name</td>
+                                    <td>02/05/2025</td>
+                                    <td>12/05/2024</td>
+                                    <td>10111221</td>
+                                    <td>3.00</td>
+                                    <td>100</td>
+                                    <td>300.00</td>
+                                </tr>
+                                <tr class="stocks-table">
+                                    <td>Sample Supplier</td>
+                                    <td>Product with a long long name</td>
+                                    <td>02/05/2025</td>
+                                    <td>12/05/2024</td>
+                                    <td>10111221</td>
+                                    <td>3.00</td>
+                                    <td>100</td>
+                                    <td>300.00</td>
+                                </tr>
+                                <tr class="stocks-table">
+                                    <td>Sample Supplier</td>
+                                    <td>Product with a long long name</td>
+                                    <td>02/05/2025</td>
+                                    <td>12/05/2024</td>
+                                    <td>10111221</td>
+                                    <td>3.00</td>
+                                    <td>100</td>
+                                    <td>300.00</td>
+                                </tr>
+                                <tr class="stocks-table">
+                                    <td>Sample Supplier</td>
+                                    <td>Product with a long long name</td>
+                                    <td>02/05/2025</td>
+                                    <td>12/05/2024</td>
+                                    <td>10111221</td>
+                                    <td>3.00</td>
+                                    <td>100</td>
+                                    <td>300.00</td>
+                                </tr>
+                                <tr></tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="view-more">
