restock page html css semi done

--- a/ALL2_sample_templates/Cashier/sales_page.html
+++ b/ALL2_sample_templates/Cashier/sales_page.html
@@ -104,7 +104,7 @@
         <div class="dimmer"></div>
         <div class="payment">
             <div class="payment-box cash">
-                <img src="assets/back-arrow.png" alt="back-arrow" id="close">
+                <button type="button" id="close-box"><img src="assets/back-arrow.png" alt="back-arrow" id="close"></button>
                 <h2 class="boxTitle">Payment Method</h2>
                     <div class="payment-button">
                         <button type="button" class="payment-button cash">Cash</button>
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="payment-box card">
-                <img src="assets/back-arrow.png" alt="back-arrow" id="close">
+                <button type="button" id="close-box"><img src="assets/back-arrow.png" alt="back-arrow" id="close"></button>
                 <h2 class="boxTitle">Payment Method</h2>
                 <div class="payment-button">
                     <button type="button" class="payment-button cash">Cash</button>
