--- a/ALL2_sample_templates/Cashier/view_history.html
+++ b/ALL2_sample_templates/Cashier/view_history.html
@@ -125,7 +125,7 @@
             </div>
 
             <div class="transact-detail">
-                <img src="assets/back-arrow.png" alt="back-arrow.png" id="close">
+                <button type="button" id="close-box"><img src="assets/back-arrow.png" alt="back-arrow" id="close"></button>
                 <div class="container">
                     <h3>Created on 21 April 2025</h3>
                     <h3>Receipt Number: 100024000</h3>
