--- a/ALL2_sample_templates/Manager/users_page.html
+++ b/ALL2_sample_templates/Manager/users_page.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="adduser-box">
-            <img src="assets/back-arrow.png" alt="back-arrow.png" id="close">
+            <button type="button" id="close-box"><img src="assets/back-arrow.png" alt="back-arrow" id="close"></button>
             <h2 class="addUser title"> Add User </h2>
             <form action="#" class="addUser">
                 <label for="username"> Username </label>
