restock page html css done

--- a/ALL2_sample_templates/Admin/restock_page.html
+++ b/ALL2_sample_templates/Admin/restock_page.html
@@ -12,10 +12,10 @@
             <button type="button" id="close-box"><img src="assets/back-arrow.png" alt="back-arrow" id="close"></button>
             <div id="important-details">
                 <div class="product-box detail">
-                    <h1>Product Name</h1>
+                    <h1>Product with a LONG LONG AHH Name</h1>
                     <h3>Product Code</h3>
-                    <button type="button">QR</button>
-                    <button type="button">Barcode</button>
+                    <button type="button" class="qr-barcode">QR</button>
+                    <button type="button" class="qr-barcode">Barcode</button>
                 </div>
                 <div class="product-box qr">
                     <img src="assets/qr-code.png" alt="Product QR" id="qrCode">
@@ -23,10 +23,10 @@
                 <div class="product-box image"></div>
             </div>
             <div id="detail-history">
-                <div class="detail-box">
+                <form class="detail-box">
                     <div class="detail-box form">
                         <div id="form-label">
-                            <h3 class="form-label">Current Stock (New):</h3>
+                            <h3 class="form-label">Stock (New):</h3>
                             <h3 class="form-label">Last Batch:</h3>
                             <h3 class="form-label">Next Batch (ETA):</h3>
                             <h3 class="form-label">Cost Per Unit:</h3>
@@ -34,16 +34,16 @@
                             <h3 class="form-label">Total Cost:</h3>
                         </div>
                         <div id="stock-history">
-                            <div class="stock-history"></div>
-                            <div class="stock-history"></div>
-                            <div class="stock-history"></div>
-                            <div class="stock-history"></div>
-                            <div class="stock-history"></div>
-                            <div class="stock-history"></div>
+                            <div class="stock-history"><input type="number" name="add stocks" id="newStock"></div>
+                            <div class="stock-history"><h3>10</h3></div>
+                            <div class="stock-history"><input type="date" name="next batch" id="nextBatch"></div>
+                            <div class="stock-history"><input type="text" name="unit cost" id="unitCost"></div>
+                            <div class="stock-history"><input type="number" name="total units" id="totalUnits"></div>
+                            <div class="stock-history"><input type="number" name="total cost" id="totalCosts"></div>
                         </div>
                     </div>
-                        <button type="button" id="updateBttn">Update Stock</button>
-                </div>
+                    <button type="button" id="updateBttn">Update Stock</button>
+                </form>
                 
                 <div class="detail-box history">
                     <h2>Stock History</h2>
