fixed check-out interface with JavaScript

--- a/ALL2_sample_templates/Cashier/sales_page.html
+++ b/ALL2_sample_templates/Cashier/sales_page.html
@@ -76,7 +76,7 @@
                     <button type="button" class="keyboard">7</button>
                     <button type="button" class="keyboard">8</button>                
                     <button type="button" class="keyboard">9</button>
-                    <button type="button" class="keyboard clear">Clear All</button>
+                    <button type="button" class="keyboard clear">Clear Cart</button>
                     <button type="button" class="keyboard">0</button>
                     <button type="button" class="keyboard cancel">Cancel</button>
                 </div>
